--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 			<h1 class="sr-only">Wine Spectator Restaurant Awards Wine And Dine</h1>
 			<a href="https://www.winespectator.com/"><img src="images/WSlogo.png" alt="Wine Spectator Restaurant Awards Wine And Dine" class="img-fluid mx-auto d-block"></a>
 			<h2 class="text-center m-0"><a href="https://restaurants.winespectator.com/">Restaurant Awards</a></h2>
+			<p class="sponsored">SPONSORED</p>
 		</header>
 
     <main id="main" class="container main" role="main">
