--- a/404.html
+++ b/404.html
@@ -78,6 +78,7 @@
 			<h1 class="sr-only">Restaurant Awards Wine And Dine</h1>
 			<a href="https://www.winespectator.com/"><img src="images/WSlogo.png" alt="Restaurant Awards Wine And Dine" class="img-fluid mx-auto d-block"></a>
 			<h2 class="text-center m-0"><a href="https://restaurants.winespectator.com/">Wine And Dine</a></h2>
+			<p class="sponsored">SPONSORED</p>
 		</header>
 
     <main id="main" class="container main" role="main">
