--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="3800 Ocean" title="3800 Ocean">
   </a>
   <div class="card-body">
-    <h5>3800 Ocean</h5><p><strong>CUISINE:</strong> American, Regional</p>
+    <h5><a href="//PalmBeachMarriottResort.com">3800 Ocean</a></h5><p><strong>CUISINE:</strong> American, Regional</p>
 <p><strong>LOCATION:</strong> <em>Palm Beach Marriott Singer Island Beach Resort &amp; Spa</em><br>
 3800 N. Ocean Drive, Riviera Beach, Florida, United States, 33404</p>
 <p><strong>AWARD LEVEL:</strong> Award of Excellence</p>
@@ -113,7 +113,7 @@
 	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="The Angus Barn Restaurant" title="The Angus Barn Restaurant">
   </a>
   <div class="card-body">
-    <h5>The Angus Barn Restaurant</h5><p><strong>CUISINE:</strong> Steakhouse</p>
+    <h5><a href="//AngusBarn.com">The Angus Barn Restaurant</a></h5><p><strong>CUISINE:</strong> Steakhouse</p>
 <p><strong>LOCATION:</strong> 9401 Glenwood Ave. Raleigh, North Carolina, United States 27617</p>
 <p><strong>AWARD LEVEL:</strong> Grand Award</p>
 <p><a href="//AngusBarn.com">AngusBarn.com</a></p>
@@ -134,7 +134,7 @@
 	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="BLVD Bistro & Bar" title="BLVD Bistro & Bar">
   </a>
   <div class="card-body">
-    <h5>BLVD Bistro &amp; Bar</h5><p><strong>CUISINE:</strong> American</p>
+    <h5><a href="//blvdregopark.com">BLVD Bistro &amp; Bar</a></h5><p><strong>CUISINE:</strong> American</p>
 <p><strong>LOCATION:</strong> 61-18 93rd St, Rego Park, NY 11374</p>
 <p><strong>AWARD LEVEL:</strong> Award of Excellence</p>
 <p><a href="//blvdregopark.com">blvdregopark.com</a></p>
@@ -155,7 +155,7 @@
 	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="The Century" title="The Century">
   </a>
   <div class="card-body">
-    <h5>The Century</h5><p><strong>CUISINE:</strong> Chinese, Seafood</p>
+    <h5><a href="//thecentury.com">The Century</a></h5><p><strong>CUISINE:</strong> Chinese, Seafood</p>
 <p><strong>LOCATION:</strong> <em>The Star</em><br>
 Shop 88, 80 Pyrmont St, Pyrmont, New South Wales, Australia, 02009</p>
 <p><strong>AWARD LEVEL:</strong> Best Award of Excellence</p>
@@ -177,7 +177,7 @@ Shop 88, 80 Pyrmont St, Pyrmont, New South Wales, Australia, 02009</p>
 	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="The Coast Guard House Restaurant" title="The Coast Guard House Restaurant">
   </a>
   <div class="card-body">
-    <h5>The Coast Guard House Restaurant</h5><p><strong>CUISINE:</strong> American, Seafood</p>
+    <h5><a href="//thecoastguardhouse.com">The Coast Guard House Restaurant</a></h5><p><strong>CUISINE:</strong> American, Seafood</p>
 <p><strong>LOCATION:</strong> 40 Ocean Road, Narragansett , Rhode Island, United States, 02882</p>
 <p><strong>AWARD LEVEL:</strong> Award of Excellence</p>
 <p><a href="//thecoastguardhouse.com">thecoastguardhouse.com</a></p>
@@ -198,7 +198,7 @@ Shop 88, 80 Pyrmont St, Pyrmont, New South Wales, Australia, 02009</p>
 	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="The Dining Room at The Nittany Lion Inn" title="The Dining Room at The Nittany Lion Inn">
   </a>
   <div class="card-body">
-    <h5>The Dining Room at The Nittany Lion Inn</h5><p><strong>CUISINE:</strong> Regional, Steakhouse</p>
+    <h5><a href="//nittanylioninn.psu.edu">The Dining Room at The Nittany Lion Inn</a></h5><p><strong>CUISINE:</strong> Regional, Steakhouse</p>
 <p><strong>LOCATION:</strong> <em>Nittany Lion Inn</em><br>
 200 W. Park Ave., State College, PA , United States, 16803</p>
 <p><strong>AWARD LEVEL:</strong> Best Award of Excellence</p>
@@ -220,7 +220,7 @@ Shop 88, 80 Pyrmont St, Pyrmont, New South Wales, Australia, 02009</p>
 	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="Golden Century Seafood" title="Golden Century Seafood">
   </a>
   <div class="card-body">
-    <h5>Golden Century Seafood</h5><p><strong>CUISINE:</strong> Asian, Chinese</p>
+    <h5><a href="//goldencentury.com.au">Golden Century Seafood</a></h5><p><strong>CUISINE:</strong> Asian, Chinese</p>
 <p><strong>LOCATION:</strong> 393-399 Sussex St., Sydney, New South Wales, Australia, 02000</p>
 <p><strong>AWARD LEVEL:</strong> Best Award of Excellence</p>
 <p><a href="//goldencentury.com.au">goldencentury.com.au</a></p>
@@ -238,10 +238,10 @@ Shop 88, 80 Pyrmont St, Pyrmont, New South Wales, Australia, 02009</p>
 	<div class="col-md-6 col-xl-4 mb-23">
 		<div class="card">
   <a href="//goodstone.com" title="Goodstone Restaurant">
-	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="Goodstone Restaurant" title="Goodstone Restaurant">
+	<img class="card-img-top" src="images/Goodstone.jpg" alt="Goodstone Restaurant" title="Goodstone Restaurant">
   </a>
   <div class="card-body">
-    <h5>Goodstone Restaurant</h5><p><strong>CUISINE:</strong> American, French</p>
+    <h5><a href="//goodstone.com">Goodstone Restaurant</a></h5><p><strong>CUISINE:</strong> American, French</p>
 <p><strong>LOCATION:</strong> <em>The Goodstone Inn</em><br>
 36205 Snake Hill Road, Middleburg , Virginia, United States, 20117</p>
 <p><strong>AWARD LEVEL:</strong> Best Award of Excellence</p>
@@ -260,14 +260,14 @@ Shop 88, 80 Pyrmont St, Pyrmont, New South Wales, Australia, 02009</p>
 	<div class="col-md-6 col-xl-4 mb-23">
 		<div class="card">
   <a href="//graycliff.com" title="Graycliff Restaurant">
-	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="Graycliff Restaurant" title="Graycliff Restaurant">
+	<img class="card-img-top" src="images/Graycliff.jpg" alt="Graycliff Restaurant" title="Graycliff Restaurant">
   </a>
   <div class="card-body">
-    <h5>Graycliff Restaurant</h5><p><strong>CUISINE:</strong> French, Bahamian</p>
+    <h5><a href="//grandlisboahotels.com/en/grandlisboa/dining">Graycliff Restaurant</a></h5><p><strong>CUISINE:</strong> French, Bahamian</p>
 <p><strong>AWARD LEVEL:</strong> Grand Award</p>
 <p><strong>LOCATION:</strong> <em>Graycliff Hotel</em><br>
 West Hill Street, Nassau, Bahamas</p>
-<p><a href="//graycliff.com">graycliff.com</a></p>
+<p>[graycliff.com]c</p>
 
     <div class="card-badges">
     	
@@ -285,7 +285,7 @@ West Hill Street, Nassau, Bahamas</p>
 	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="Grand Lisboa Hotel" title="Grand Lisboa Hotel">
   </a>
   <div class="card-body">
-    <h5>Grand Lisboa Hotel</h5><p class="mt-0"><em class="text-purple">Multiple Award-Winning Restaurants On Property:</em><br>
+    <h5><a href="//grandlisboahotels.com/en/grandlisboa/dining">Grand Lisboa Hotel</a></h5><p class="mt-0"><em class="text-purple">Multiple Award-Winning Restaurants On Property:</em><br>
 Casa Don Alfonso, The Kitchen, Robuchon Au Dome</p>
 
 <p><strong>CUISINE:</strong> Italian, Steakhouse, French</p>
@@ -311,10 +311,10 @@ Avenida de Lisboa, Macau, China</p>
 	<div class="col-md-6 col-xl-4 mb-23">
 		<div class="card">
   <a href="//jalexanders.com" title="J. Alexander's Restaurant">
-	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="J. Alexander's Restaurant" title="J. Alexander's Restaurant">
+	<img class="card-img-top" src="images/JAlexanders.jpg" alt="J. Alexander's Restaurant" title="J. Alexander's Restaurant">
   </a>
   <div class="card-body">
-    <h5>J. Alexander&#39;s Restaurant</h5><p><strong>CUISINE:</strong> American</p>
+    <h5><a href="//jalexanders.com">J. Alexander&#39;s Restaurant</a></h5><p><strong>CUISINE:</strong> American</p>
 <p><strong>AWARD LEVEL:</strong> Award of Excellence</p>
 <p><strong>LOCATION:</strong> <em>Multiple Award-Winning Locations</em><br>
 &ndash; 73 White Bridge Rd #130, Nashville, TN 37205<br>
@@ -337,7 +337,7 @@ Avenida de Lisboa, Macau, China</p>
 	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="Joe's Seafood, Prime Steak & Stone Crab" title="Joe's Seafood, Prime Steak & Stone Crab">
   </a>
   <div class="card-body">
-    <h5>Joe&#39;s Seafood, Prime Steak &amp; Stone Crab</h5><p><strong>CUISINE:</strong> Seafood, Steakhouse</p>
+    <h5><a href="//joes.net">Joe&#39;s Seafood, Prime Steak &amp; Stone Crab</a></h5><p><strong>CUISINE:</strong> Seafood, Steakhouse</p>
 <p><strong>AWARD LEVEL:</strong> Best Award of Excellence</p>
 <p><strong>LOCATION</strong>: <em>Multiple Award-Winning Locations</em><br>
 &ndash; 750 15th St NW, Washington, DC 20005<br>
@@ -358,10 +358,10 @@ Avenida de Lisboa, Macau, China</p>
 	<div class="col-md-6 col-xl-4 mb-23">
 		<div class="card">
   <a href="//kinziechophouse.com" title="Kinzie Chophouse">
-	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="Kinzie Chophouse" title="Kinzie Chophouse">
+	<img class="card-img-top" src="images/Kinzie.jpg" alt="Kinzie Chophouse" title="Kinzie Chophouse">
   </a>
   <div class="card-body">
-    <h5>Kinzie Chophouse</h5><p><strong>CUISINE:</strong> American, Steakhouse</p>
+    <h5><a href="//kinziechophouse.com">Kinzie Chophouse</a></h5><p><strong>CUISINE:</strong> American, Steakhouse</p>
 <p><strong>AWARD LEVEL:</strong> Best Award of Excellence</p>
 <p><strong>LOCATION:</strong> 400 N. Wells St., Chicago , Illinois, United States, 60654</p>
 <p><a href="//kinziechophouse.com">kinziechophouse.com</a></p>
@@ -382,7 +382,7 @@ Avenida de Lisboa, Macau, China</p>
 	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="M Grill" title="M Grill">
   </a>
   <div class="card-body">
-    <h5>M Grill</h5><p><strong>CUISINE:</strong> Brazilian, Steakhouse</p>
+    <h5><a href="//m-grill.com">M Grill</a></h5><p><strong>CUISINE:</strong> Brazilian, Steakhouse</p>
 <p><strong>AWARD LEVEL:</strong> Award of Excellence</p>
 <p><strong>LOCATION:</strong> 3832 Wilshire Blvd Suite 202 Suite 202, Los Angeles, CA 90010</p>
 <p><a href="//m-grill.com">m-grill.com</a></p>
@@ -403,7 +403,7 @@ Avenida de Lisboa, Macau, China</p>
 	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="MGM Macau" title="MGM Macau">
   </a>
   <div class="card-body">
-    <h5>MGM Macau</h5><p class="mt-0"><em class="text-purple">Multiple Award-Winning Restaurants On Property:</em><br>
+    <h5><a href="//mgm.mo/en/macau/dining">MGM Macau</a></h5><p class="mt-0"><em class="text-purple">Multiple Award-Winning Restaurants On Property:</em><br>
 Aux Beaux Arts, Imperial Court</p>
 
 <p><strong>CUISINE:</strong> French, Seafood, Chinese</p>
@@ -429,10 +429,10 @@ Av. Dr. Sun Yat-Sen, Macau, China</p>
 	<div class="col-md-6 col-xl-4 mb-23">
 		<div class="card">
   <a href="//mgm.mo/en/macau/dining" title="The Musso & Frank Grill">
-	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="The Musso & Frank Grill" title="The Musso & Frank Grill">
+	<img class="card-img-top" src="images/Musso&Frank.jpg" alt="The Musso & Frank Grill" title="The Musso & Frank Grill">
   </a>
   <div class="card-body">
-    <h5>The Musso &amp; Frank Grill</h5><p><strong>CUISINE:</strong> American</p>
+    <h5><a href="//mgm.mo/en/macau/dining">The Musso &amp; Frank Grill</a></h5><p><strong>CUISINE:</strong> American</p>
 <p><strong>AWARD LEVEL:</strong> Award of Excellence</p>
 <p><strong>LOCATION:</strong> 6667 Hollywood Blvd, Los Angeles, CA 90028</p>
 <p><a href="//mgm.mo/en/macau/dining">mussoandfrank.com</a></p>
@@ -453,7 +453,7 @@ Av. Dr. Sun Yat-Sen, Macau, China</p>
 	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="Nerai" title="Nerai">
   </a>
   <div class="card-body">
-    <h5>Nerai</h5><p><strong>CUISINE:</strong> Greek, Seafood</p>
+    <h5><a href="//nerainyc.com">Nerai</a></h5><p><strong>CUISINE:</strong> Greek, Seafood</p>
 <p><strong>AWARD LEVEL:</strong> Best Award of Excellence</p>
 <p><strong>LOCATION:</strong> 55 E 54th St, New York, NY 10022</p>
 <p><a href="//nerainyc.com">nerainyc.com</a></p>
@@ -474,7 +474,7 @@ Av. Dr. Sun Yat-Sen, Macau, China</p>
 	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="Pappas Bros. Steakhouse" title="Pappas Bros. Steakhouse">
   </a>
   <div class="card-body">
-    <h5>Pappas Bros. Steakhouse</h5><p><strong>CUISINE:</strong> American, Steakhouse</p>
+    <h5><a href="//pappasbros.com">Pappas Bros. Steakhouse</a></h5><p><strong>CUISINE:</strong> American, Steakhouse</p>
 <p><strong>AWARD LEVEL:</strong> Various</p>
 <p><strong>LOCATION:</strong> <em>Multiple Award-Winning Locations</em><br>
 &ndash; 10477 Lombardy Ln, Dallas, TX 75220<br>
@@ -502,7 +502,7 @@ Av. Dr. Sun Yat-Sen, Macau, China</p>
 	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="Porter House Bar and Grill" title="Porter House Bar and Grill">
   </a>
   <div class="card-body">
-    <h5>Porter House Bar and Grill</h5><p><strong>CUISINE:</strong> American, Steakhouse</p>
+    <h5><a href="//porterhousenyc.com">Porter House Bar and Grill</a></h5><p><strong>CUISINE:</strong> American, Steakhouse</p>
 <p><strong>AWARD LEVEL:</strong> Best Award of Excellence</p>
 <p><strong>LOCATION:</strong> <em>The Shops at Columbus Circle</em><br>
 10 Columbus Circle, 4th Floor, New York, NY, United States, 10019</p>
@@ -521,10 +521,10 @@ Av. Dr. Sun Yat-Sen, Macau, China</p>
 	<div class="col-md-6 col-xl-4 mb-23">
 		<div class="card">
   <a href="//lessings.com/corporate/restaurants/venue/sandbar" title="Sandbar">
-	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="Sandbar" title="Sandbar">
+	<img class="card-img-top" src="images/Sandbar.jpg" alt="Sandbar" title="Sandbar">
   </a>
   <div class="card-body">
-    <h5>Sandbar</h5><p><strong>CUISINE:</strong> American</p>
+    <h5><a href="//lessings.com/corporate/restaurants/venue/sandbar">Sandbar</a></h5><p><strong>CUISINE:</strong> American</p>
 <p><strong>AWARD LEVEL:</strong> Award of Excellence</p>
 <p><strong>LOCATION:</strong> 55 Main Street, Cold Spring Harbor, NY 11724</p>
 <p><a href="//lessings.com/corporate/restaurants/venue/sandbar">lessings.com/corporate/restaurants/venue/sandbar</a></p>
@@ -542,10 +542,10 @@ Av. Dr. Sun Yat-Sen, Macau, China</p>
 	<div class="col-md-6 col-xl-4 mb-23">
 		<div class="card">
   <a href="//sersteak.com" title="SĒR Steak + Spirits">
-	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="SĒR Steak + Spirits" title="SĒR Steak + Spirits">
+	<img class="card-img-top" src="images/SER.jpg" alt="SĒR Steak + Spirits" title="SĒR Steak + Spirits">
   </a>
   <div class="card-body">
-    <h5>SĒR Steak + Spirits</h5><p><strong>CUISINE:</strong> Steakhouse</p>
+    <h5><a href="//sersteak.com">SĒR Steak + Spirits</a></h5><p><strong>CUISINE:</strong> Steakhouse</p>
 <p><strong>AWARD LEVEL:</strong> Award of Excellence</p>
 <p><strong>LOCATION:</strong> <em>Hilton Anatole</em>
 2201 N Stemmons Fwy, Dallas, TX 75207</p>
@@ -567,7 +567,7 @@ Av. Dr. Sun Yat-Sen, Macau, China</p>
 	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="Spuntino’s Wine Bar & Italian Tapas" title="Spuntino’s Wine Bar & Italian Tapas">
   </a>
   <div class="card-body">
-    <h5>Spuntino’s Wine Bar &amp; Italian Tapas</h5><p><strong>CUISINE:</strong> Italian, Tapas</p>
+    <h5><a href="//spuntinowinebar.com">Spuntino’s Wine Bar &amp; Italian Tapas</a></h5><p><strong>CUISINE:</strong> Italian, Tapas</p>
 <p><strong>AWARD LEVEL:</strong> Various</p>
 <p><strong>LOCATION:</strong> <em>Multiple Award-Winning Locations</em><br>
 &ndash; 1002 Old Country Rd, Garden City, NY 11530<br>
@@ -591,10 +591,10 @@ Av. Dr. Sun Yat-Sen, Macau, China</p>
 	<div class="col-md-6 col-xl-4 mb-23">
 		<div class="card">
   <a href="//stoney-river-steakhouse-grill" title="Stoney River Steakhouse & Grill">
-	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="Stoney River Steakhouse & Grill" title="Stoney River Steakhouse & Grill">
+	<img class="card-img-top" src="images/StoneyRiver.jpg" alt="Stoney River Steakhouse & Grill" title="Stoney River Steakhouse & Grill">
   </a>
   <div class="card-body">
-    <h5>Stoney River Steakhouse &amp; Grill</h5><p>CUISINE: Italian, Tapas</p>
+    <h5><a href="//stoneyriver.com">Stoney River Steakhouse &amp; Grill</a></h5><p>CUISINE: Italian, Tapas</p>
 <p><strong>AWARD LEVEL:</strong> Award of Excellence</p>
 <p><strong>LOCATION:</strong> <em>Multiple Award-Winning Locations</em><br>
 &ndash; 3015 West End Ave, Nashville, TN 37203<br>
@@ -615,10 +615,10 @@ Av. Dr. Sun Yat-Sen, Macau, China</p>
 	<div class="col-md-6 col-xl-4 mb-23">
 		<div class="card">
   <a href="https://www.lessings.com/corporate/restaurants/venue/view" title="The View">
-	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="The View" title="The View">
+	<img class="card-img-top" src="images/TheView.jpg" alt="The View" title="The View">
   </a>
   <div class="card-body">
-    <h5>The View</h5><p><strong>CUISINE:</strong> Coastal, Seafood</p>
+    <h5><a href="https://www.lessings.com/corporate/restaurants/venue/view">The View</a></h5><p><strong>CUISINE:</strong> Coastal, Seafood</p>
 <p><strong>AWARD LEVEL:</strong> Best Award of Excellence</p>
 <p><strong>LOCATION:</strong> 3 Consuelo Place, Oakdale, NY. 11769</p>
 <p><a href="https://www.lessings.com/corporate/restaurants/venue/view">lessings.com/corporate/restaurants/venue/view</a></p>
