--- a/404.html
+++ b/404.html
@@ -82,7 +82,8 @@
 		</header>
 
     <main id="main" class="container main" role="main">
-        <h1 class="text-center text-purple my-36">Great Places to Wine & Dine</h1>
+        <h1 class="text-center text-purple mt-36">Great Places to Wine & Dine</h1>
+        <h4 class="text-center mb-36"><span>2019 Edition</span></h4>
         
             <h1>404</h1><h3>Whoops. Looks like what you&#39;re looking for can&#39;t be found.</h3>
         
