--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
 		</header>
 
     <main id="main" class="container main" role="main">
-        <h1 class="text-center text-purple my-36">Great Places to Wine & Dine</h1>
+        <h1 class="text-center text-purple mt-36">Great Places to Wine & Dine</h1>
+        <h4 class="text-center mb-36"><span>2019 Edition</span></h4>
         
             <div class="row">
 	<div class="col-md-6 col-xl-4 mb-23">
@@ -281,18 +282,18 @@ West Hill Street, Nassau, Bahamas</p>
 	</div>
 	<div class="col-md-6 col-xl-4 mb-23">
 		<div class="card">
-  <a href="//grandlisboahotels.com/en/grandlisboa/dining" title="Grand Lisboa Hotel">
+  <a href="//grandlisboahotels.com/en/dining" title="Grand Lisboa Hotel">
 	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="Grand Lisboa Hotel" title="Grand Lisboa Hotel">
   </a>
   <div class="card-body">
-    <h5><a href="//grandlisboahotels.com/en/grandlisboa/dining">Grand Lisboa Hotel</a></h5><p class="mt-0"><em class="text-purple">Multiple Award-Winning Restaurants On Property:</em><br>
+    <h5><a href="//grandlisboahotels.com/en/dining">Grand Lisboa Hotel</a></h5><p class="mt-0"><em class="text-purple">Multiple Award-Winning Restaurants On Property:</em><br>
 Casa Don Alfonso, The Kitchen, Robuchon Au Dome</p>
 
 <p><strong>CUISINE:</strong> Italian, Steakhouse, French</p>
 <p><strong>AWARD LEVEL:</strong> Various</p>
 <p><strong>LOCATION:</strong> <em>Grand Lisboa Hotel</em><br>
 Avenida de Lisboa, Macau, China</p>
-<p><a href="//grandlisboahotels.com/en/grandlisboa/dining">grandlisboahotels.com/en/grandlisboa/dining</a></p>
+<p><a href="//grandlisboahotels.com/en/dining">grandlisboahotels.com/en/dining</a></p>
 
     <div class="card-badges">
     	
