--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@ Av. Dr. Sun Yat-Sen, Macau, China</p>
 	<img class="card-img-top" src="images/SER.jpg" alt="SĒR Steak + Spirits" title="SĒR Steak + Spirits">
   </a>
   <div class="card-body">
-    <h5><a href="//sersteak.com">SĒR Steak + Spirits</a></h5><p><strong>CUISINE:</strong> Steakhouse</p>
+    <h5><a href="//sersteak.com">S<span style="font-weight:500">Ē</span>R Steak + Spirits</a></h5><p><strong>CUISINE:</strong> Steakhouse</p>
 <p><strong>AWARD LEVEL:</strong> Award of Excellence</p>
 <p><strong>LOCATION:</strong> <em>Hilton Anatole</em>
 2201 N Stemmons Fwy, Dallas, TX 75207</p>
