--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 	<div class="col-md-6 col-xl-4 mb-23">
 		<div class="card">
   <a href="//blvdregopark.com" title="BLVD Bistro & Bar">
-	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="BLVD Bistro & Bar" title="BLVD Bistro & Bar">
+	<img class="card-img-top" src="images/BLVD.jpg" alt="BLVD Bistro & Bar" title="BLVD Bistro & Bar">
   </a>
   <div class="card-body">
     <h5><a href="//blvdregopark.com">BLVD Bistro &amp; Bar</a></h5><p><strong>CUISINE:</strong> American</p>
@@ -175,7 +175,7 @@ Shop 88, 80 Pyrmont St, Pyrmont, New South Wales, Australia, 02009</p>
 	<div class="col-md-6 col-xl-4 mb-23">
 		<div class="card">
   <a href="//thecoastguardhouse.com" title="The Coast Guard House Restaurant">
-	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="The Coast Guard House Restaurant" title="The Coast Guard House Restaurant">
+	<img class="card-img-top" src="images/CoastGuardHouse.jpg" alt="The Coast Guard House Restaurant" title="The Coast Guard House Restaurant">
   </a>
   <div class="card-body">
     <h5><a href="//thecoastguardhouse.com">The Coast Guard House Restaurant</a></h5><p><strong>CUISINE:</strong> American, Seafood</p>
@@ -196,7 +196,7 @@ Shop 88, 80 Pyrmont St, Pyrmont, New South Wales, Australia, 02009</p>
 	<div class="col-md-6 col-xl-4 mb-23">
 		<div class="card">
   <a href="//nittanylioninn.psu.edu" title="The Dining Room at The Nittany Lion Inn">
-	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="The Dining Room at The Nittany Lion Inn" title="The Dining Room at The Nittany Lion Inn">
+	<img class="card-img-top" src="images/NittyLion.jpg" alt="The Dining Room at The Nittany Lion Inn" title="The Dining Room at The Nittany Lion Inn">
   </a>
   <div class="card-body">
     <h5><a href="//nittanylioninn.psu.edu">The Dining Room at The Nittany Lion Inn</a></h5><p><strong>CUISINE:</strong> Regional, Steakhouse</p>
@@ -380,7 +380,7 @@ Avenida de Lisboa, Macau, China</p>
 	<div class="col-md-6 col-xl-4 mb-23">
 		<div class="card">
   <a href="//m-grill.com" title="M Grill">
-	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="M Grill" title="M Grill">
+	<img class="card-img-top" src="images/MGrill.jpg" alt="M Grill" title="M Grill">
   </a>
   <div class="card-body">
     <h5><a href="//m-grill.com">M Grill</a></h5><p><strong>CUISINE:</strong> Brazilian, Steakhouse</p>
@@ -528,7 +528,7 @@ Av. Dr. Sun Yat-Sen, Macau, China</p>
     <h5><a href="//lessings.com/corporate/restaurants/venue/sandbar">Sandbar</a></h5><p><strong>CUISINE:</strong> American</p>
 <p><strong>AWARD LEVEL:</strong> Award of Excellence</p>
 <p><strong>LOCATION:</strong> 55 Main Street, Cold Spring Harbor, NY 11724</p>
-<p><a href="//lessings.com/corporate/restaurants/venue/sandbar">lessings.com/corporate/restaurants/venue/sandbar</a></p>
+<p><a href="//www.lessings.com/corporate/restaurants/venue/sandbar">lessings.com/corporate/restaurants/venue/sandbar</a></p>
 
     <div class="card-badges">
     	
@@ -565,7 +565,7 @@ Av. Dr. Sun Yat-Sen, Macau, China</p>
 	<div class="col-md-6 col-xl-4 mb-23">
 		<div class="card">
   <a href="//spuntinowinebar.com" title="Spuntino’s Wine Bar & Italian Tapas">
-	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="Spuntino’s Wine Bar & Italian Tapas" title="Spuntino’s Wine Bar & Italian Tapas">
+	<img class="card-img-top" src="images/Spuntinos.jpg" alt="Spuntino’s Wine Bar & Italian Tapas" title="Spuntino’s Wine Bar & Italian Tapas">
   </a>
   <div class="card-body">
     <h5><a href="//spuntinowinebar.com">Spuntino’s Wine Bar &amp; Italian Tapas</a></h5><p><strong>CUISINE:</strong> Italian, Tapas</p>
@@ -622,7 +622,7 @@ Av. Dr. Sun Yat-Sen, Macau, China</p>
     <h5><a href="https://www.lessings.com/corporate/restaurants/venue/view">The View</a></h5><p><strong>CUISINE:</strong> Coastal, Seafood</p>
 <p><strong>AWARD LEVEL:</strong> Best Award of Excellence</p>
 <p><strong>LOCATION:</strong> 3 Consuelo Place, Oakdale, NY. 11769</p>
-<p><a href="https://www.lessings.com/corporate/restaurants/venue/view">lessings.com/corporate/restaurants/venue/view</a></p>
+<p><a href="//www.lessings.com/corporate/restaurants/venue/view">lessings.com/corporate/restaurants/venue/view</a></p>
 
     <div class="card-badges">
     	
