--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 	<div class="col-md-6 col-xl-4 mb-23">
 		<div class="card">
   <a href="//AngusBarn.com" title="The Angus Barn Restaurant">
-	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="The Angus Barn Restaurant" title="The Angus Barn Restaurant">
+	<img class="card-img-top" src="images/AngusBarn.jpg" alt="The Angus Barn Restaurant" title="The Angus Barn Restaurant">
   </a>
   <div class="card-body">
     <h5><a href="//AngusBarn.com">The Angus Barn Restaurant</a></h5><p><strong>CUISINE:</strong> Steakhouse</p>
@@ -335,7 +335,7 @@ Avenida de Lisboa, Macau, China</p>
 	<div class="col-md-6 col-xl-4 mb-23">
 		<div class="card">
   <a href="//joes.net" title="Joe's Seafood, Prime Steak & Stone Crab">
-	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="Joe's Seafood, Prime Steak & Stone Crab" title="Joe's Seafood, Prime Steak & Stone Crab">
+	<img class="card-img-top" src="images/JoesStoneCrab.jpg" alt="Joe's Seafood, Prime Steak & Stone Crab" title="Joe's Seafood, Prime Steak & Stone Crab">
   </a>
   <div class="card-body">
     <h5><a href="//joes.net">Joe&#39;s Seafood, Prime Steak &amp; Stone Crab</a></h5><p><strong>CUISINE:</strong> Seafood, Steakhouse</p>
@@ -451,7 +451,7 @@ Av. Dr. Sun Yat-Sen, Macau, China</p>
 	<div class="col-md-6 col-xl-4 mb-23">
 		<div class="card">
   <a href="//nerainyc.com" title="Nerai">
-	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="Nerai" title="Nerai">
+	<img class="card-img-top" src="images/Nerai.jpg" alt="Nerai" title="Nerai">
   </a>
   <div class="card-body">
     <h5><a href="//nerainyc.com">Nerai</a></h5><p><strong>CUISINE:</strong> Greek, Seafood</p>
