--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 	<div class="col-md-6 col-xl-4 mb-23">
 		<div class="card">
   <a href="//PalmBeachMarriottResort.com" title="3800 Ocean">
-	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="3800 Ocean" title="3800 Ocean">
+	<img class="card-img-top" src="images/3800Ocean.jpg" alt="3800 Ocean" title="3800 Ocean">
   </a>
   <div class="card-body">
     <h5><a href="//PalmBeachMarriottResort.com">3800 Ocean</a></h5><p><strong>CUISINE:</strong> American, Regional</p>
@@ -153,7 +153,7 @@
 	<div class="col-md-6 col-xl-4 mb-23">
 		<div class="card">
   <a href="//thecentury.com" title="The Century">
-	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="The Century" title="The Century">
+	<img class="card-img-top" src="images/TheCentury.jpg" alt="The Century" title="The Century">
   </a>
   <div class="card-body">
     <h5><a href="//thecentury.com">The Century</a></h5><p><strong>CUISINE:</strong> Chinese, Seafood</p>
@@ -218,7 +218,7 @@ Shop 88, 80 Pyrmont St, Pyrmont, New South Wales, Australia, 02009</p>
 	<div class="col-md-6 col-xl-4 mb-23">
 		<div class="card">
   <a href="//goldencentury.com.au" title="Golden Century Seafood">
-	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="Golden Century Seafood" title="Golden Century Seafood">
+	<img class="card-img-top" src="images/GoldenCentury.jpg" alt="Golden Century Seafood" title="Golden Century Seafood">
   </a>
   <div class="card-body">
     <h5><a href="//goldencentury.com.au">Golden Century Seafood</a></h5><p><strong>CUISINE:</strong> Asian, Chinese</p>
@@ -283,7 +283,7 @@ West Hill Street, Nassau, Bahamas</p>
 	<div class="col-md-6 col-xl-4 mb-23">
 		<div class="card">
   <a href="//grandlisboahotels.com/en/dining" title="Grand Lisboa Hotel">
-	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="Grand Lisboa Hotel" title="Grand Lisboa Hotel">
+	<img class="card-img-top" src="images/GrandLisboaHotel.jpg" alt="Grand Lisboa Hotel" title="Grand Lisboa Hotel">
   </a>
   <div class="card-body">
     <h5><a href="//grandlisboahotels.com/en/dining">Grand Lisboa Hotel</a></h5><p class="mt-0"><em class="text-purple">Multiple Award-Winning Restaurants On Property:</em><br>
@@ -401,7 +401,7 @@ Avenida de Lisboa, Macau, China</p>
 	<div class="col-md-6 col-xl-4 mb-23">
 		<div class="card">
   <a href="//mgm.mo/en/macau/dining" title="MGM Macau">
-	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="MGM Macau" title="MGM Macau">
+	<img class="card-img-top" src="images/MGM.jpg" alt="MGM Macau" title="MGM Macau">
   </a>
   <div class="card-body">
     <h5><a href="//mgm.mo/en/macau/dining">MGM Macau</a></h5><p class="mt-0"><em class="text-purple">Multiple Award-Winning Restaurants On Property:</em><br>
@@ -472,7 +472,7 @@ Av. Dr. Sun Yat-Sen, Macau, China</p>
 	<div class="col-md-6 col-xl-4 mb-23">
 		<div class="card">
   <a href="//pappasbros.com" title="Pappas Bros. Steakhouse">
-	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="Pappas Bros. Steakhouse" title="Pappas Bros. Steakhouse">
+	<img class="card-img-top" src="images/PappasBrosSteakhouse.jpg" alt="Pappas Bros. Steakhouse" title="Pappas Bros. Steakhouse">
   </a>
   <div class="card-body">
     <h5><a href="//pappasbros.com">Pappas Bros. Steakhouse</a></h5><p><strong>CUISINE:</strong> American, Steakhouse</p>
@@ -500,7 +500,7 @@ Av. Dr. Sun Yat-Sen, Macau, China</p>
 	<div class="col-md-6 col-xl-4 mb-23">
 		<div class="card">
   <a href="//porterhousenyc.com" title="Porter House Bar and Grill">
-	<img class="card-img-top" src="images/ShellysBackroom.jpg" alt="Porter House Bar and Grill" title="Porter House Bar and Grill">
+	<img class="card-img-top" src="images/Porterhouse.jpg" alt="Porter House Bar and Grill" title="Porter House Bar and Grill">
   </a>
   <div class="card-body">
     <h5><a href="//porterhousenyc.com">Porter House Bar and Grill</a></h5><p><strong>CUISINE:</strong> American, Steakhouse</p>
